--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,29 @@ h1, h2, h3 {
 h1 { font-size: var(--fs-h1);}
 h2 { font-size: var(--fs-h2);}
 h3 { font-size: var(--fs-h3);}
+
+.section__title {
+    margin-bottom: .25em;
+}
+
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display: block;
+}
+
+strong {
+    font-weight: var(--fw-bold);
+}
+
+.section__subtitle--intro, .section__subtitle--about {
+    background: var(--clr-accent);
+    font-family: var(--ff-secondary);
+}
